feat: update swagger note
